--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore . --fix",
+    "lint:style": "stylelint **/*.{js,jsx,ts,tsx,css,scss} --ignore-path .gitignore --fix",
+    "format": "yarn lint:js && yarn lint:style"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -23,7 +26,14 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.2",
     "tailwindcss": "^1.9.6"
   }
 }
