--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,9 @@
     "prettier/@typescript-eslint"
   ],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "overrides": []
 }
