--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore . --fix",
     "lint:style": "stylelint **/*.{js,jsx,ts,tsx,css,scss} --ignore-path .gitignore --fix",
-    "format": "yarn lint:js"
+    "lint:prettier": "prettier --write \"**/*.+(js|jsx|json|css|md)\" --ignore-path .gitignore",
+    "format": "yarn lint:js && yarn lint:prettier"
   },
   "dependencies": {
     "classnames": "^2.2.6",
