--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
     "lint:prettier": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|css|scss|md)\" --ignore-path .gitignore",
     "format": "yarn lint:js && yarn lint:prettier"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,yml,yaml,css,scss,sass,md}": [
+      "yarn format",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
@@ -33,6 +44,8 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
     "tailwindcss": "^1.9.6"
