--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore . --fix",
     "lint:style": "stylelint **/*.{js,jsx,ts,tsx,css,scss} --ignore-path .gitignore --fix",
     "lint:prettier": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|css|scss|md)\" --ignore-path .gitignore",
-    "format": "yarn lint:js && yarn lint:prettier"
+    "format": "yarn lint:js && yarn lint:prettier",
+    "test": "jest"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,yml,yaml,css,scss,sass,md}": [
@@ -23,6 +24,7 @@
     }
   },
   "dependencies": {
+    "@testing-library/react": "^11.1.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
@@ -45,6 +48,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^10.5.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
