--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next": "^10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-transition-group": "^4.4.1",
+    "recoil": "^0.1.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
     "typescript": "^4.0.5"
@@ -41,6 +43,7 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-transition-group": "^4.4.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.13.0",
