--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "recoil": "^0.1.2",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "ua-parser-js": "^0.7.22"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
@@ -44,6 +45,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-transition-group": "^4.4.0",
+    "@types/ua-parser-js": "^0.7.33",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.13.0",
